# stem_continuation_dataset_generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  entrypoint.sh  pyproject.toml  tox.ini
.github/workflows/: deployment.yml  python-app.yml
src/stem_continuation_dataset_generator/: cluster.py  codec.py  codec_test.py  constants.py  dataset.py  pipeline.py  prepare.py  process.py
src/stem_continuation_dataset_generator/steps/: augment.py  augment_check.py  convert_to_ogg.py  distort.py  distort_check.py  encode.py  merge.py  merge_test.py  split.py  stem.py  uncompress.py  upload.py
src/stem_continuation_dataset_generator/utils/: constants.py  device.py  env.py  utils.py
