[tool.poetry]
name = "stem_continuation_dataset_generator"
description = "Creation of datasets for music stems continuation"
readme = "README.md"
version = "0.1.0"  # Set a static version or use versioning tool later
authors = ["Michele Lugano <michele.lugano9@gmail.com>"]
license = "MIT"
keywords = []
repository = "https://github.com/energydrink9/stem_continuation_dataset_generator"
homepage = "https://github.com/energydrink9/stem_continuation_dataset_generator#readme"
documentation = "https://github.com/energydrink9/stem_continuation_dataset_generator#readme"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
packages = [{include = "stem_continuation_dataset_generator", from="src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
clearml = "^1.16.4"
scipy = "^1.12.0"
tqdm = "4.66.5"
pydub = "0.25.1"
soundfile = "*"
encodec = "^0.1.1"
huggingface-hub = "^0.25.1"
transformers = "^4.45.1"
tokenizers = "^0.20.0"
coiled = "1.58.0"
numpy = "^1.26.4"
audiomentations = "^0.37.0"
pyroomacoustics = "^0.7.7"
s3fs = "^2024.10.0"
dask = {extras = ["distributed"], version = "^2024.10.0"}
bokeh = "^3.6.0"
ffmpeg = "^1.4"
torch = "^2.5.1"
torchaudio = "^2.5.1"
torchvision = "^0.20.1"
accelerate = "^1.1.1"
demucs = "^4.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
pydub-stubs = "^0.25.1.1"
pytest = "^8.3.3"
types-tqdm = "^4.66.0.20240417"
types-requests = "^2.32.0.20240914"
sounddevice = "^0.5.1"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["src"]
testpaths = ["src"]

[tool.coverage.run]
source = ["src/stem_continuation_dataset_generator"]
branch = true
parallel = true
omit = ["src/stem_continuation_dataset_generator/__about__.py"]

[tool.coverage.paths]
source = ["src/stem_continuation_dataset_generator", "*/stem_continuation_dataset_generator/src/stem_continuation_dataset_generator"]
tests = ["tests", "*/stem_continuation_dataset_generator/**/*_test.py"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]

[tool.poetry.scripts]
train = "stem_continuation_dataset_generator.process:main"

[[tool.mypy.overrides]]
module = [
    "audiomentations.*",
    "coiled.*",
    "fsspec.*",
    "clearml.*",
    "sounddevice.*",
    "soundfile.*",
    "s3fs.*",
    "sklearn.*",
    "scipy.*",
    "torchaudio.*",
    "transformers.*",
]
ignore_missing_imports = true